AmbientPlay: Introduce history manager [3/4]
Change-Id: I6e774b7570035a4dee04fef76e83077584917c13
Signed-off-by: Henrique Silva <jhenrique09.mcz@hotmail.com>

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -242,6 +242,7 @@
     <!-- Ambient Indication -->
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="org.pixelexperience.ambient.play.history.MANAGE_HISTORY" />
 
     <protected-broadcast android:name="android.intent.action.SCREEN_STATE_SERVICE_UPDATE" />
 
