Cleanup lockscreen weather implementation [1/2]

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -260,7 +260,7 @@
     <uses-permission android:name="android.permission.CHANGE_CONFIGURATION" />
 
     <!-- Weather on lockscreen -->
-    <uses-permission android:name="org.pixelexperience.weather.client.READ_WEATHER" />
+    <uses-permission android:name="com.android.providers.weather.READ_WEATHER" />
 
     <application
         android:name=".SystemUIApplication"
