--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -244,7 +244,7 @@
     <!-- Ambient Indication -->
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-    <uses-permission android:name="org.pixelexperience.ambient.play.history.MANAGE_HISTORY" />
+    <uses-permission android:name="com.ambient.play.history.MANAGE_HISTORY" />
 
     <protected-broadcast android:name="android.intent.action.SCREEN_STATE_SERVICE_UPDATE" />
 
